Updated so station contains WFO and Radar
