# src/main/java/ca/datamagic/station/xml/StationHandler.java
@@ -1,0 +1,14 @@
+/**
+ * 
+ */
+package ca.datamagic.station.xml;
+
+import ca.datamagic.station.dto.StationDTO;
+
+/**
+ * @author Greg
+ *
+ */
+public interface StationHandler {
+	void station(StationDTO station);
+}
