# src/main/resources/META-INF/swagger.json
@@ -8,7 +8,7 @@
 			"name" : "Apache License Version 2.0"
 		}
 	},
-	"host" : "localhost:8081",
+	"host" : "localhost:8080",
 	"basePath" : "/Station",
 	"tags" : [{
 			"name" : "station-controller",
@@ -16,64 +16,6 @@
 		}
 	],
 	"paths" : {
-		"/api/cities" : {
-			"get" : {
-				"tags" : ["station-controller"],
-				"summary" : "cities",
-				"operationId" : "cities",
-				"consumes" : ["application/json"],
-				"produces" : ["*/*"],
-				"responses" : {
-					"200" : {
-						"description" : "OK",
-						"schema" : {
-							"type" : "array",
-							"items" : {
-								"$ref" : "#/definitions/CityDTO"
-							}
-						}
-					},
-					"401" : {
-						"description" : "Unauthorized"
-					},
-					"403" : {
-						"description" : "Forbidden"
-					},
-					"404" : {
-						"description" : "Not Found"
-					}
-				}
-			}
-		},
-		"/api/zips" : {
-			"get" : {
-				"tags" : ["station-controller"],
-				"summary" : "zips",
-				"operationId" : "zips",
-				"consumes" : ["application/json"],
-				"produces" : ["*/*"],
-				"responses" : {
-					"200" : {
-						"description" : "OK",
-						"schema" : {
-							"type" : "array",
-							"items" : {
-								"$ref" : "#/definitions/ZipDTO"
-							}
-						}
-					},
-					"401" : {
-						"description" : "Unauthorized"
-					},
-					"403" : {
-						"description" : "Forbidden"
-					},
-					"404" : {
-						"description" : "Not Found"
-					}
-				}
-			}
-		},
 		"/api/list" : {
 			"get" : {
 				"tags" : ["station-controller"],
@@ -82,35 +24,11 @@
 				"consumes" : ["application/json"],
 				"produces" : ["*/*"],
 				"parameters" : [{
-						"name" : "address",
-						"in" : "query",
-						"description" : "address",
-						"required" : false,
-						"type" : "string"
-					},{
-						"name" : "city",
-						"in" : "query",
-						"description" : "city",
-						"required" : false,
-						"type" : "string"
-					},{
 						"name" : "state",
 						"in" : "query",
 						"description" : "state",
 						"required" : false,
 						"type" : "string"
-					},{
-						"name" : "zip",
-						"in" : "query",
-						"description" : "zip",
-						"required" : false,
-						"type" : "string"
-					},{
-						"name" : "hasRadiosonde",
-						"in" : "query",
-						"description" : "hasRadiosonde",
-						"required" : false,
-						"type" : "boolean"
 					}
 				],
 				"responses" : {
@@ -208,46 +126,6 @@
 					}
 				}
 			}
-		},
-		"/api/{latitude}/{longitude}/nearestWithRadiosonde" : {
-			"get" : {
-				"tags" : ["station-controller"],
-				"summary" : "readNearestWithRadiosonde",
-				"operationId" : "readNearestWithRadiosonde",
-				"consumes" : ["application/json"],
-				"produces" : ["*/*"],
-				"parameters" : [{
-						"name" : "latitude",
-						"in" : "path",
-						"description" : "latitude",
-						"required" : true,
-						"type" : "double"
-					},{
-						"name" : "longitude",
-						"in" : "path",
-						"description" : "longitude",
-						"required" : true,
-						"type" : "double"
-					}
-				],
-				"responses" : {
-					"200" : {
-						"description" : "OK",
-						"schema" : {
-							"$ref" : "#/definitions/StationDTO"
-						}
-					},
-					"401" : {
-						"description" : "Unauthorized"
-					},
-					"403" : {
-						"description" : "Forbidden"
-					},
-					"404" : {
-						"description" : "Not Found"
-					}
-				}
-			}
 		}
 	},
 	"definitions" : {
@@ -260,28 +138,13 @@
 				"stationName" : {
 					"type" : "string"
 				},
-				"streetNumber" : {
+				"state" : {
 					"type" : "string"
 				},
-				"streetName" : {
+				"wfo" : {
 					"type" : "string"
 				},
-				"city" : {
-					"type" : "string"
-				},
-				"stateCode" : {
-					"type" : "string"
-				},
-				"stateName" : {
-					"type" : "string"
-				},
-				"countryCode" : {
-					"type" : "string"
-				},
-				"countryName" : {
-					"type" : "string"
-				},
-				"zip" : {
+				"radar" : {
 					"type" : "string"
 				},
 				"latitude" : {
@@ -291,34 +154,6 @@
 				"longitude" : {
 					"type" : "number",
 					"format" : "double"
-				},
-				"hasRadiosonde" : {
-					"type" : "boolean"
-				}
-			}
-		},
-		"CityDTO" : {
-			"type" : "object",
-			"properties" : {
-				"city" : {
-					"type" : "string"
-				},
-				"state" : {
-					"type" : "string"
-				}
-			}
-		},
-		"ZipDTO" : {
-			"type" : "object",
-			"properties" : {
-				"zip" : {
-					"type" : "string"
-				},
-				"city" : {
-					"type" : "string"
-				},
-				"state" : {
-					"type" : "string"
 				}
 			}
 		}
